# cloudy

./: .gitignore  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  project.md
backend/: .dockerignore  .env.example  Dockerfile  fly.toml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2b8d6f7a9c01_cloud_normals.py  616b3e53d92a_baseline_schema.py  7c3a4a4b5c6d_cloud_rollups.py  91f2c3d4e5f6_lightning_daily_rollups.py
backend/cloudy/: cli.py  config.py  logging.py  production_ingest.py
backend/cloudy/api/: __init__.py  cloud.py  geocode.py  health.py  lightning.py  schemas.py  station.py
backend/cloudy/climatology/: __init__.py  api.py  cloud.py  lightning.py  query.py  types.py
backend/cloudy/core/: cache.py  cloud_query.py  cloud_read.py  cloud_series.py  cloud_types.py  geo.py  lightning_events.py  lightning_limits.py  lightning_query.py  lightning_read.py  lightning_series.py  lightning_types.py  series_plan.py  series_sql.py  spatial.py  units.py
backend/cloudy/db/: __init__.py  migrate.py  models.py  session.py
backend/cloudy/exploration/: __init__.py  api_cloud.py  api_lightning.py  cloud_query.py  cloud_read.py  cloud_series.py  cloud_types.py  lightning_events.py  lightning_limits.py  lightning_query.py  lightning_read.py  lightning_series.py  lightning_types.py  series_plan.py
backend/cloudy/geocode/: __init__.py  nominatim.py  photon.py
backend/cloudy/ingest/: cloud.py  lightning.py  retry.py  stations.py
backend/cloudy/predictions/: __init__.py  api.py  backtest_scores.json  evaluate.py  outlook.py  persistence.py  query.py  spatial_backtest.json  types.py
backend/tests/: conftest.py  test_cache.py  test_climatology_api.py  test_climatology_cloud_pg.py  test_climatology_lightning_pg.py  test_cloud_api.py  test_cloud_series_pg.py  test_geo.py  test_geocode.py  test_health.py  test_ingest_cloud.py  test_ingest_lightning.py  test_lightning_api.py  test_lightning_events.py  test_lightning_query.py  test_lightning_series_pg.py  test_migrations.py  test_models.py  test_predictions_api.py  test_predictions_outlook.py  test_predictions_persistence.py  test_production_ingest.py  test_series_plan.py  test_spatial_benchmark.py  test_spatial_statistical.py  test_station_api.py  test_units.py
frontend/: index.html  (+7 more)
(+152 files in other folders)
