[project]
name = "cloudy"
version = "0.1.0"
description = "Cloud and lightning history for Swedish locations, from SMHI open data."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136,<0.137",
    "uvicorn>=0.49,<0.50",
    "pydantic>=2.13,<3",
    "pydantic-settings>=2.14,<3",
    "sqlmodel>=0.0.27",
    "psycopg[binary]>=3.2,<4",
    "httpx>=0.28",
    "alembic>=1.14,<2",
]

[project.scripts]
cloudy = "cloudy.cli:main"

[dependency-groups]
dev = [
    "ruff>=0.14",
    "mypy>=1.15",
    "pytest>=8",
    "pytest-cov>=7.1.0",
    # Spatial benchmark only (`cloudy spatial-backtest`, predictions/spatial/benchmark/).
    # Kept out of the runtime image by `uv sync --no-dev`; the serving path never imports
    # these, so production carries none of their weight.
    "lightgbm>=4.6.0",
    "scikit-learn>=1.9.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pandas-stubs>=3.0.3.260530",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cloudy"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
